# gmx_beta

./: pyproject.toml
model/: glp_model.py
scripts/: BTCETH.ipynb  binanceAccountFetcher.py  dataBaseInserter.py  dataProcessor.py  database_creation.sql  glpFetcher.py  main.py  metamaskInfoFetcher.py  priceFetcher.py
scripts/util/: binancePairsEnumType.py  contractInfoEnumType.py  tokensInfoEnumType.py
